# Internship_2024_Inria

./: .gitignore  .gitlab-ci.yml  README.md  README.org
.guix-extra/: channels-elementaryx.scm
GEMM-openMP/: CMakeLists.txt  README.org  compute_stat.py  main.cpp  matrix_size.py  run_result.md  stat.json  stat_1.py  stat_bis.py  stat_ligne.json  stat_mono.json  stat_multiple.json  stat_omp.json
GEMM-openMP/resault_zonda/: stat_1000.json  stat_10000.json  stat_11000.json  stat_2000.json  stat_3000.json  stat_4000.json  stat_5000.json  stat_6000.json  stat_7000.json  stat_8000.json  stat_9000.json
bench/: README.org  Untitled1.ipynb  Untitled2.ipynb  anim.py  anim_out  blockTest.csv  chameleon_dtesting_hybrid.csv  chameleon_dtesting_mpi_only.csv  chameleon_dtesting_thread_only.csv  composyx_distgemm_full_task.csv  composyx_distgemm_full_task_new.csv  composyx_distgemm_hybrid.csv  composyx_distgemm_mpi_only.csv  composyx_distgemm_thread_only.csv  dataTransfer.ipynb  graph.ipynb  multinode_run.py  requirements.txt  test.ipynb
bench/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  anim-checkpoint.py  block_var_size-checkpoint.py  dataTransfer-checkpoint.ipynb  graph-checkpoint.ipynb  main-checkpoint.py  plafrim-checkpoint.py  (+1 more)
presentation-final/: .gitignore  README.md  main.tex  plan.md
presentation-workgroup/: .gitignore  README.md  channels.scm  env.scm  presentation.org  presentation_task.tex
rapport/: .gitignore  README.org  bliblio.bib
rawlatex/: figures  images  manifest-elementaryx-texlive.scm  presentation-final.tex  presentation-workgroup.tex
(+820 files in other folders)
